@@ -1,7 +1,14 @@
 useDynLib(binsegRcpp, .registration=TRUE)
 import(data.table)
+importFrom("graphics", "lines", "points", "text")
 importFrom(Rcpp, evalCpp)
 export(binseg_normal)
+export(get_splits)
+export(get_splits_empirical)
+export(get_splits_extreme)
+export(case.colors)
+export(case.sizes)
 S3method("print", "binseg_normal")
 S3method("coef", "binseg_normal")
 S3method("plot", "binseg_normal")
+S3method("plot", "splits")
