@@ -1,0 +1,12 @@
+\name{case.colors}
+\alias{case.colors}
+\docType{data}
+\title{case colors}
+\description{Character vector giving default colors for cases, ordered from
+worst to best.}
+\usage{"case.colors"}
+
+
+
+
+
