@@ -1,0 +1,11 @@
+\name{case.sizes}
+\alias{case.sizes}
+\docType{data}
+\title{case sizes}
+\description{Numeric vector giving default sizes for cases.}
+\usage{"case.sizes"}
+
+
+
+
+
