@@ -1,11 +1,15 @@
 TODOS
 
+re-order splits to show best case with max.segments < n.data.
+
 2021.11.1
 
 break ties in Segment operator< by size (split larger segments first).
 
 binseg_normal gains args is.validation.vec, position.vec in order to
 support efficient cross-validation.
+
+get_splits* functions for comparing empirical to best/worst case.
 
 2021.1.6
 
